fix overall page spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,9 @@ img {
 }
 
 .full-height {
-    min-height: 100vh;
+    min-height: 50vh;
+    /* min-height: 100vh; */
+    min-height: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
